# learnvault

./: .env.example  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  environments.toml  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
.github/: CODEOWNERS
.github/workflows/: backend-tests.yml  contracts-ci.yml  contracts.yml  frontend-ci.yml  server-ci.yml  stale.yml
contracts/governance_token/: Cargo.toml
contracts/learn_token/: Cargo.toml
contracts/learn_token/src/: lib.rs  test.rs
contracts/scholar_nft/: Cargo.toml
contracts/upgrade_timelock_vault/: Cargo.toml
contracts/upgrade_timelock_vault/src/: lib.rs
docs/: TODO-nft-images.md  api.md  contracts.md  cors-configuration.md  credentials-api-example.md  glossary.md  nft-metadata-standard.md  pr-008.md  security-improvements.md
docs/adr/: ADR-008.md
e2e/fixtures/: mock-wallet.ts
scripts/: generate-clients.sh
server/: .env.example  jest.config.js  package-lock.json  package.json  tsconfig.json
server/scripts/: migrate.ts
server/src/: index.ts  openapi.ts
src/: App.test.tsx  App.tsx  index.css  main.tsx
src/components/: AddressDisplay.tsx  CommentCard.tsx  CourseFilter.tsx  CourseProgressBar.tsx  GetTestUSDCButton.tsx  LRNHistoryChart.tsx  MilestoneReportForm.tsx  MilestoneSubmitPanel.tsx  MilestoneTracker.tsx  NavBar.tsx  ProposalCountdown.test.ts  ThemeToggle.tsx  TreasuryStatsBar.tsx  TxHashLink.tsx  WalletButton.tsx
src/data/: lessons.ts
src/hooks/: useAdmin.ts  useCourse.ts  useCourses.ts  (+9 more)
target_local/: .rustc_info.json
(+689 files in other folders)
